<resources>

    <string name="app_name">com.test.touch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="layout1">Layout 1</string>
    <string name="layout2">Layout 2</string>
    <string name="layout3">Layout 3</string>
    
    <string name="text1">Text 1</string>
    <string name="text2">Text 2</string>
    <string name="text3">Text 3</string>
  	  

    
</resources>